--- a/s3bucket/ct_crowdstrike_stackset_org_acct.yaml
+++ b/s3bucket/ct_crowdstrike_stackset_org_acct.yaml
@@ -102,7 +102,7 @@ Resources:
           - Action: sts:AssumeRole
             Condition:
               StringEquals:
-                sts:ExternalId: !Ref 'ExternalID'
+                sts:ExternalID: !Ref 'ExternalID'
             Effect: Allow
             Principal:
               AWS: !Join
