--- a/cft/Discover_setup_delegated_account.yaml
+++ b/cft/Discover_setup_delegated_account.yaml
@@ -13,22 +13,20 @@ Parameters:
 
   FalconClientId:
     Description: Your Falcon OAuth2 API Key.
-    NoEcho: 'true'
+    NoEcho: true
     Type: String
-
 
   FalconSecret:
     Description: Your Falcon OAuth2 API Secret.
-    NoEcho: 'true'
+    NoEcho: true
     Type: String
 
   ExternalID:
     Description: ExternalID Used for authenticating assume role requests.
-    NoEcho: 'true'
+    NoEcho: true
     Type: String
 
   CrowdStrikeCloud:
-
     Description:  The CrowdStrike Cloud your CID is hosted in us1, us2, eu
     Type: String
     AllowedValues:
@@ -84,165 +82,59 @@ Metadata:
       - Label:
           default: CrowdStrike Role Parameters.
         Parameters:
+          - StackSetName
           - RoleName
           - ExternalID
+          - RoleCreationDelayTimer
       - Label:
           default: CrowdStrike Falcon API keys.
         Parameters:
           - FalconClientId
           - FalconSecret
+          - CrowdStrikeCloud
       - Label:
           default: Log Archive Account Details
         Parameters:
           - LogArchiveAccount
           - LogArchiveBucketRegion
-#
+
 Resources:
-  CrowdStrikeCredentials:
-    Type: AWS::SecretsManager::Secret
+  DiscoverStackSet:
+    Type: 'AWS::CloudFormation::StackSet'
     Properties:
-      Description: CrowdStrike Credentials
-      Name: !Join
-        - '-'
-        - - !Ref 'AWS::StackName'
-          - CrowdStrikeAPISecret
-      SecretString:
-        Fn::Join:
-          - ''
-          - - '{"FalconClientId":"'
-            - Ref: FalconClientId
-            - '","FalconSecret": "'
-            - Ref: FalconSecret
-            - '","ExternalID": "'
-            - Ref: ExternalID
-            - '"}'
-  launchLambdaRole:
-    Type: AWS::IAM::Role
-    Metadata:
-      cfn_nag:
-        rules_to_suppress:
-          - id: W11
-            reason: "Listsecrets * is required."
-    Properties:
-      AssumeRolePolicyDocument:
-        Version: '2012-10-17'
-        Statement:
-          - Effect: Allow
-            Principal:
-              Service: lambda.amazonaws.com
-            Action: sts:AssumeRole
-            Condition: { }
-      Path: /
-      Policies:
-        - PolicyName: Get_Values
-          PolicyDocument:
-            Version: '2012-10-17'
-            Statement:
-              Sid: VisualEditor1
-              Effect: Allow
-              Action:
-                - secretsmanager:GetSecretValue
-              Resource: !Ref CrowdStrikeCredentials
-        - PolicyName: List_secrets
-          PolicyDocument:
-            Version: '2012-10-17'
-            Statement:
-              Sid: VisualEditor2
-              Effect: Allow
-              Action:
-                - secretsmanager:ListSecrets
-              Resource: '*'
-        - PolicyName: CloudFormation_ops
-          PolicyDocument:
-            Version: '2012-10-17'
-            Statement:
-              Sid: VisualEditor2
-              Effect: Allow
-              Action:
-                - cloudformation:CreateStackSet
-                - cloudformation:CreateStackInstances
-                - cloudformation:DescribeStackSet
-                - cloudformation:ListStackInstances
-                - cloudformation:DeleteStackInstances
-                - cloudformation:DeleteStackSet
-              Resource: !Join [ ':', [ 'arn:aws:cloudformation', !Ref 'AWS::Region', !Ref 'AWS::AccountId', 'stackset/*/*' ] ]
-        - PolicyName: create_stackset
-          PolicyDocument:
-            Version: '2012-10-17'
-            Statement:
-              Sid: VisualEditor2
-              Effect: Allow
-              Action:
-                - cloudformation:CreateStackSet
-              Resource: '*'
-        - PolicyName: Pass_Role
-          PolicyDocument:
-            Version: '2012-10-17'
-            Statement:
-              Sid: VisualEditor3
-              Effect: Allow
-              Action:
-                - iam:PassRole
-              Resource: !Join [ ':', [ 'arn:aws:iam:', !Ref "AWS::AccountId", 'role/service-role/AWSControlTowerStackSetRole' ] ]
-      ManagedPolicyArns:
-        - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
-        - arn:aws:iam::aws:policy/AWSOrganizationsReadOnlyAccess
-        - arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess
-
-  permissionForEventsToInvokeLambda:
-    Type: AWS::Lambda::Permission
-    Properties:
-      Action: lambda:InvokeFunction
-      FunctionName: !GetAtt "CreateStackSetLambda.Arn"
-      Principal: cloudformation.amazonaws.com
-      SourceAccount: !Ref "AWS::AccountId"
-
-  CreateStackSetLambda:
-    Type: 'AWS::Lambda::Function'
-    DeletionPolicy: Delete
-    Properties:
-      Code:
-        S3Bucket: !FindInMap [ S3perRegion, !Ref "AWS::Region", NAME ]
-        S3Key: create_stackset_lambda_org_acct.zip
-      Layers:
-        - !Ref lambdaLayer
-      Environment:
-        Variables:
-          S3Bucket: !FindInMap [ S3perRegion, !Ref "AWS::Region", NAME ]
-          CrowdStrikeCloud: !Ref CrowdStrikeCloud
-          RoleCreationDelayTimer: !Ref RoleCreationDelayTimer
-          AwsRegion: !Ref AWS::Region
-          LogArchiveAccount: !Ref LogArchiveAccount
-          LogArchiveBucketRegion: !Ref LogArchiveBucketRegion
-          RoleName: !Ref RoleName
-          CSAccountNumber: !FindInMap [ CSCloud, !Ref CrowdStrikeCloud, CSAccountNumber ]
-          CSAssumingRoleName: !FindInMap [ CSCloud, !Ref CrowdStrikeCloud, CSAssumingRoleName ]
-          CrowdstrikeCredentialsSecret: !Ref CrowdStrikeCredentials
-          StackSetName: !Ref StackSetName
-      Handler: create_stackset_lambda_org_acct.lambda_handler
-      Runtime: python3.7
-      MemorySize: 128
-      Role: !GetAtt "launchLambdaRole.Arn"
-      Timeout: 180
-  CreateStackSet:
-    Type: 'Custom::TriggerLambda'
-    Properties:
-      ServiceToken: !GetAtt
-        - CreateStackSetLambda
-        - Arn
-  lambdaLayer:
-    Type: AWS::Lambda::LayerVersion
-    Properties:
-      CompatibleRuntimes:
-        - python3.7
-      Content:
-        S3Bucket: !FindInMap [ S3perRegion, !Ref "AWS::Region", NAME ]
-        S3Key: falconpy-layer.zip
-      Description: Layer for requests package
-      LayerName: requests-package
-
-
-
-
-
-
+      AutoDeployment:
+        Enabled: true
+        RetainStacksOnAccountRemoval: false
+      Capabilities: 
+        - CAPABILITY_IAM 
+        - CAPABILITY_NAMED_IAM
+        - CAPABILITY_AUTO_EXPAND
+      Description: "StackSet to manage deployment of CrowdStrike Falcon Discover for AWS"
+      Parameters:
+        - ParameterKey: CrowdStrikeCloud
+          ParameterValue: !Ref CrowdStrikeCloud
+        - ParameterKey: RoleName
+          ParameterValue: !Ref RoleName
+        - ParameterKey: RoleCreationDelayTimer
+          ParameterValue: !Ref RoleCreationDelayTimer
+        - ParameterKey: CSAccountNumber
+          ParameterValue: !FindInMap [ CSCloud, !Ref CrowdStrikeCloud, CSAccountNumber ]
+        - ParameterKey: CSAssumingRoleName
+          ParameterValue: !FindInMap [ CSCloud, !Ref CrowdStrikeCloud, CSAssumingRoleName ]
+        - ParameterKey: LogArchiveBucketRegion
+          ParameterValue: !Ref LogArchiveBucketRegion
+        - ParameterKey: LogArchiveAccount
+          ParameterValue: !Ref LogArchiveAccount
+        - ParameterKey: S3Bucket
+          ParameterValue: !FindInMap [ S3perRegion, !Ref "AWS::Region", NAME ]
+        - ParameterKey: ExternalID
+          ParameterValue: !Ref ExternalID
+        - ParameterKey: FalconClientId
+          ParameterValue: !Ref FalconClientId
+        - ParameterKey: FalconSecret
+          ParameterValue: !Ref FalconSecret
+      PermissionModel: SERVICE_MANAGED
+      StackSetName: !Ref StackSetName
+      TemplateURL: !Sub
+        - "https://${BucketName}.s3.amazonaws.com/ct_crowdstrike_stackset_org_acct.yaml"
+        - BucketName: !FindInMap [ S3perRegion, !Ref "AWS::Region", NAME ]
